fixed projects jump location

--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,8 @@
 }
 
 #projectsJump{
-    margin-top: -3%;
-    padding-bottom: none;
+    margin-top: -4%;
+    padding-bottom: 2%;
     display: block;
 }
 
